--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
+    "lint:fix": "next lint --fix",
     "test": "vitest"
   },
   "dependencies": {
@@ -17,16 +18,19 @@
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@testing-library/dom": "^10.4.0",
+    "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.2.0",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "@vitejs/plugin-react": "^4.3.4",
     "classnames": "^2.5.1",
+    "clsx": "^2.1.1",
     "eslint": "^9",
     "eslint-config-next": "15.1.6",
     "jsdom": "^26.0.0",
     "postcss": "^8",
+    "tailwind-merge": "^3.0.2",
     "tailwindcss": "^3.4.1",
     "typescript": "^5",
     "vite-tsconfig-paths": "^5.1.4",
